Added html tag to curriculo / tabela almost done

--- a/tabela.html
+++ b/tabela.html
@@ -1,31 +1,86 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Atividade Tabelas</title>
-    </head>
-    
-    <body>
-        <!--Primeira Tabela-->
-        <table border="1" height="300px" width="300px">
-            <tr>
-                <td colspan="3"> </td>
-            </tr>
 
-            <tr> 
-                <td> </td>
-                <td> </td>
-                <td> </td>
-            </tr>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Atividade Tabelas</title>
+</head>
 
-            <tr> 
-                <td> </td>
-                <td> </td>
-                <td> </td>
-            </tr>
-            
-        </table>
-    </body>
+<body>
+    <!--Primeira Tabela-->
+    <table border="1" height="300px" width="300px">
+        <tr>
+            <td colspan="3"> </td>
+        </tr>
+
+        <tr>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+        </tr>
+
+        <tr>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+        </tr>
+    </table>
+
+    <!--Segunda Tabela-->
+    <table border="1" height="300px" width="300px">
+        <tr>
+            <td rowspan="3"> </td>
+            <td> </td>
+            <td> </td>
+        </tr>
+
+        <tr>
+            <td> </td>
+            <td> </td>
+        </tr>
+
+        <tr>
+            <td> </td>
+            <td> </td>
+        </tr>
+    </table>
+
+    <!--Terceira Tabela-->
+    <table border="1" height="300px" width="300px">
+        <tr>
+            <td colspan="5"> </td>
+        </tr>
+
+        <tr>
+            <td rowspan="4"> </td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+        </tr>
+
+        <tr>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+        </tr>
+
+        <tr>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+        </tr>
+
+        <tr>
+            <td colspan="3"> </td>
+            <td> </td>
+        </tr>
+    </table>
+
+</body>
+
 </html>
