--- a/tabela.html
+++ b/tabela.html
@@ -64,12 +64,11 @@
         <tr>
             <td> </td>
             <td> </td>
-            <td> </td>
+            <td rowspan="2"> </td>
             <td> </td>
         </tr>
 
         <tr>
-            <td> </td>
             <td> </td>
             <td> </td>
             <td> </td>
