--- a/formulario.html
+++ b/formulario.html
@@ -8,7 +8,7 @@
 
     <style>
         body {
-            background-color: lightcyan;
+            background-color:darkseagreen;
             font-size: 20px;
             padding-top: 10%;
         }
@@ -47,9 +47,7 @@
                 <option value="bradesco">Bradesco</option>
                 <option value="planserv">Planserv</option>
                 <option value="unimed">Unimed</option>
-                <option value="allianz">Allianz</option>
-                <option value="biosaude">Biosaude</option>
-                <option value="portoseguro">Porto Seguro</option>
+                <option value="others">Outros</option>
             </select>
 
             <br><br>
@@ -72,7 +70,7 @@
             </div>
 
             <input type="submit" name="send" value="Enviar">
-            <input type="reset" value="Resetar Campos">
+            <input type="reset" name="reset" value="Resetar Campos">
         </form>
     </body>
 </center>
