--- a/curriculo.html
+++ b/curriculo.html
@@ -6,6 +6,14 @@
         <title>Matheus Ribeiro Garcia</title>
         <meta name="description" content="Curriculo Matheus Ribeiro Garcia">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <style>
+            h1 {
+                font-size: 36px;
+                color:darkred;
+            }
+        </style>
+
     </head>
 
     <body>
